--- a/index.html
+++ b/index.html
@@ -51,19 +51,13 @@
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
+<h2>dMFX Submitter</h2>
+<p>A PyQt/python GUI script to allow easier shot/element/asset submission to the Shotgun production database (includes drag and drop support)</p>
+<iframe src="//player.vimeo.com/video/74055419" width="500" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/74055419">dMFX Submitter</a> from <a href="http://vimeo.com/stratton">Tom Stratton</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-      </section>
+<h2>Clone Folders</h2>
+<p>A simple python based mac gui for automatically generating project folder structure based on a user-specified template</p>
+<iframe src="//player.vimeo.com/video/74055420" width="500" height="377" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/74055420">CloneFolders</a> from <a href="http://vimeo.com/stratton">Tom Stratton</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
