--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
 <p>In addition to the demos here, I've coded the following:</p>
 
 <ul>
-<li>
-</ul><pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<li> Web based version submitter that checks the local filesystem for versions eligible for update.
+</ul>
+
 <h2>dMFX Submitter</h2>
 <p>A PyQt/python GUI script to allow easier shot/element/asset submission to the Shotgun production database (includes drag and drop support)</p>
 <iframe src="//player.vimeo.com/video/74055419" width="500" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/74055419">dMFX Submitter</a> from <a href="http://vimeo.com/stratton">Tom Stratton</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
