--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <p>In addition to the demos here, I've coded the following:</p>
 
 <ul>
-<li> Web based version submitter that checks the local filesystem for versions eligible for update.
+<li> Web based version submitter that checks the local filesystem for versions eligible for update.</li>
 </ul>
 
 <h2>dMFX Submitter</h2>
