--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 <p>A simple python based mac gui for automatically generating project folder structure based on a user-specified template</p>
 <iframe src="//player.vimeo.com/video/74055420" width="500" height="377" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/74055420">CloneFolders</a> from <a href="http://vimeo.com/stratton">Tom Stratton</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
+<h2>Payroll/Time-Card App</h2>
+<p>A web app based on web.py that provides a UI standing between artists and the Shotgun database. Used for tracking payroll time within Shotgun.</p>
+<iframe src="//player.vimeo.com/video/109389034" width="500" height="377" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/109389034">Payroll App</a> from <a href="http://vimeo.com/stratton">Tom Stratton</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
